--- a/exercises/coding-from-life/main.css
+++ b/exercises/coding-from-life/main.css
@@ -1,1 +1,58 @@
 /* Your CSS Here! */
+body {
+  background-color: #aaaaaa;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+}
+
+.candle__body {
+  width: 50px;
+  height: 100px;
+  background-color: wheat;
+  position: absolute;
+
+  bottom: 10%;
+  left: 20%;
+
+  z-index: 5;
+}
+
+.candle__stem {
+  width: 10px;
+  height: 50px;
+  background-color: black;
+
+  position: absolute;
+
+  bottom: 18%;
+  left: 22%;
+
+  border-radius: 5px;
+  transform: rotate(20deg);
+  z-index: 6;
+}
+
+.plant {
+  position: absolute;
+  top: 50%;
+  left: 22%;
+}
+
+.plant__pot {
+  width: 200px;
+  height: 250px;
+  background-color: lightgray;
+}
+
+.plant__leaves {
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  position: absolute;
+  top: -300px;
+  border-radius: 5% 10%;
+}
